fixed input element vertical alignments

--- a/windriver/media/style/extra.css
+++ b/windriver/media/style/extra.css
@@ -211,6 +211,7 @@ body {
 #searchBar .searchInput, #searchBar .searchInputCancelable {
   font-size: 16px;
   height: 32px;
+  line-height: 32px;
   margin-top: 5px;
   border-radius: 10px;
   -ms-border-radius: 10px;
@@ -251,6 +252,7 @@ body {
   font-size: 14px;
   font-weight: bold;
   height: 24px;
+  line-height: 24px;
   width: 24px;
   border: none;
   border-radius: 10px;
@@ -260,7 +262,7 @@ body {
   -moz-border-radius: 6px;
   -webkit-border-radius: 6px;
   -khtml-border-radius: 6px;
-  margin: 6px 0 0 -30px;
+  margin: 10px 0 0 -30px;
 }
 #searchBar .cancelSearchBtn:hover {
   color: #d84040;
